--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,3 +19,6 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
       - run: npm test
+      - run:
+          name: release
+          command: npm run semantic-release || true
