--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,3 +22,6 @@ jobs:
       - run:
           name: release
           command: npm run semantic-release || true
+      - run:
+          name: build
+          command: npm run build
