--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,27 +1,27 @@
 version: 2
 jobs:
-  build:
+  test:
     docker:
       - image: circleci/node:9.5.0
-    working_directory: ~/repo
-
+    steps:
+      - run: npm install
+      - run: npm test
+  release:
+    docker:
+      - image: circleci/node:9.5.0
     steps:
       - checkout
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "package.json" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
-
       - run: npm install
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-      - run: npm test
-      - run:
-          name: build
-          command: npm run build
-      - run:
-          name: release
-          command: npm run semantic-release
+      # Run optional required steps before releasing
+      # - run: npm run build-script
+      - run: npx semantic-release
+
+workflows:
+  version: 2
+  test_and_release:
+    # Run the test jobs first, then the release only when all the test jobs are successful
+    jobs:
+      - test
+      - release:
+          requires:
+            - test
